# epic-armageddon-machine-spirit

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  LICENSE  Makefile  README.md  legiones-astartes.json  legiones-astartes.md  prices.json  pyproject.toml  requirements.txt  solar-auxilia.json  solar-auxilia.md
.github/instructions/: ea-unit-pricing.instructions.md
.github/workflows/: ci.yml  npm-publish.yml
src/: main.py  prices.json
src/data/: __init__.py  ea_40k_astartes.py  ea_40k_eldar.py  ea_40k_feral_orks.py  ea_40k_imperial_navy.py  ea_40k_steel_legion.py  ea_hh_legion.py  ea_hh_solar_aux.py  ea_hh_weapons.py  models.py
src/data/input/: ea_hh_legion.py  ea_hh_solar_aux.py  ea_hh_weapons.py
src/data/training/: ea_40k_astartes.py  ea_40k_dark_eldar.py  ea_40k_eldar.py  ea_40k_feral_orks.py  ea_40k_imperial_navy.py  ea_40k_minervan.py  ea_40k_ork_war_horde.py  ea_40k_steel_legion.py  ea_40k_tyranid.py  epic_uk_squats.py
src/ea_unit_pricing/: __init__.py  cli.py  logging_setup.py
src/ea_unit_pricing/data/: __init__.py
src/ea_unit_pricing/data/input/: ea_hh_legion.py  ea_hh_solar_aux.py  ea_hh_weapons.py
src/ea_unit_pricing/data/training/: ea_40k_astartes.py  ea_40k_dark_eldar.py  ea_40k_eldar.py  ea_40k_feral_orks.py  ea_40k_imperial_navy.py  ea_40k_minervan.py  ea_40k_ork_war_horde.py  ea_40k_steel_legion.py  ea_40k_tyranid.py  epic_uk_squats.py
src/ea_unit_pricing/domain/: __init__.py  army.py  enums.py  result.py  unit.py  weapons.py
src/ea_unit_pricing/gpr/: split_trainer.py  trainer.py
src/ea_unit_pricing/gpr/mapping/: universal_unit.py
src/ea_unit_pricing/io/: paths.py
src/ea_unit_pricing/pipeline/: prediction.py
src/ea_unit_pricing/serialization/: __init__.py  army_json.py  army_list_json.py  army_markdown.py  markdown_table.py  rounding.py  unit_stats_table.py
src/gpr/: result.py  split_trainer.py  trainer.py
src/gpr/mapping/: map1.py  map2.py  universal_unit.py
src/gpr/mapping/segments/: assault.py  extra_damage.py  fire_power.py  range_bands.py  stats.py  trait_groups.py  unit_type.py
src/models/: result.py  units.py
tests/: conftest.py  test_rounding.py
tests/golden/: legiones-astartes.json  legiones-astartes.md  prices.json  solar-auxilia.json
tests/integration/: test_prediction_pipeline.py  test_universal_unit_vector.py
tests/unit/: test_result_quality.py  test_rounding.py  test_trainer.py  test_unit_configurations.py  test_weapon_immutability.py
(+7 files in other folders)
