[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ea-unit-pricing"
version = "0.1.0"
description = "Gaussian Process Regression tool for predicting Epic Armageddon unit costs"
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "joblib==1.5.2",
    "numpy==2.0.2",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "tabulate>=0.9.0",
    "threadpoolctl==3.6.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ea-unit-pricing[test,lint]",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
    "types-tabulate",
]

[project.scripts]
eaup = "ea_unit_pricing.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913",  # too-many-arguments — domain constructors are inherently large
    "PLR2004",  # magic-value-comparison — game stats use bare integers by convention
]

[tool.ruff.lint.per-file-ignores]
"src/ea_unit_pricing/data/**" = ["E501"]  # long Unit/weapon literals are acceptable

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "joblib.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["ea_unit_pricing"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
